<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <EditText
        android:id="@+id/editNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNum1" />

    <TextView
        android:id="@+id/txtNum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="152dp"
        android:text="@string/txtNum1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtNum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:text="@string/txtNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:text="@string/btnResta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toEndOf="@+id/btnSuma"
        app:layout_constraintTop_toBottomOf="@+id/editNum2"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:text="@string/btnSuma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNum2"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:text="@string/btnMultiplicacion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toEndOf="@+id/btnResta"
        app:layout_constraintTop_toBottomOf="@+id/editNum2"
        app:layout_constraintVertical_bias="0.178" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="69dp"
        android:layout_height="38dp"
        android:text="@string/btnDivision"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicacion"
        app:layout_constraintTop_toBottomOf="@+id/editNum2"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/txtResultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2"
        app:layout_constraintVertical_bias="0.462" />

    <TextView
        android:id="@+id/txtNumResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtNumResultado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toEndOf="@+id/txtResultado"
        app:layout_constraintTop_toBottomOf="@+id/txtNum2"
        app:layout_constraintVertical_bias="0.461"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="588dp"
        tools:text="@string/btnSiguiente" />

</androidx.constraintlayout.widget.ConstraintLayout>